# seedarr

./: .gitignore  Cargo.toml  README.md  TODO.md  config.example.toml  config.toml  flake.nix  package.json  tmp.sh
.github/: copilot-instructions.md
docs/: specs.md
src/: config.rs  main.rs
src/app/: common.rs  mod.rs  radarr.rs  sonarr.rs
src/core/: mod.rs
src/core/fs/: mod.rs
src/core/media/: mediainfo.rs  mod.rs
src/core/naming/: builder.rs  mod.rs  parser.rs  types.rs  validator.rs
src/core/sonarr/: mod.rs
src/core/torrent/: mod.rs
src/core/upload/: description.rs  mod.rs  torrust.rs
src/models/: movie.rs
src/utils/: errors.rs  mod.rs  pathmap.rs
