[package]
name = "seedarr"
description = "WIP"
version = "0.0.1"
authors = ["Bartholomé Gili <dev.bartho@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = []

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
dotenvy = { git = "https://github.com/allan2/dotenvy", features = ["macros"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
async-trait = "0.1.86"

radarr = "0.1.1"

# naming utils
regex = "1.11.1"
once_cell = "1.20.2"
unicode-normalization = "0.1.24"

[profile.release]
strip = true
lto = true